# fail-agent

./: .gitignore  index.html  opencode-agents.json  opencode.json  script.js  styles.css
docs/: fail-egent.md
wiggum/: README.md  dev-step.sh  ralph-multiagent.sh  ralph-opencode.sh  ralph-trunk.sh  run.sh  verify.sh
wiggum/supervisor/: Cargo.toml
wiggum/supervisor/src/: agents.rs  cost.rs  llm.rs  main.rs  state.rs  supervisor.rs
